--- a/details.html
+++ b/details.html
@@ -17,13 +17,25 @@
 </head>
 
 <body>
-    <form>
-        <div class="form-group">
-            <input type="text" class="form-control" id="searchAlcohol" placeholder="Enter an ingredient">
+    <div class="card">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="card-body">
+              <form class="form-inline">
+                <div class="col-md-6 col-sm-offset-3">
+                  <div class="btn-space">
+                    <div class="form-group">
+                      <input type="text" class="form-control" id="searchAlcohol" placeholder="Enter an ingredient">
+                      <button type="button" class="btn btn-primary" id="submit-button">Search</button>
+                    </div>
+                </div>  
+              </form>
+          </div>   
+          </div>
+          </div>
         </div>
-
-        <button type="button" class="btn btn-primary" id="submit-button">Search</button>
-    </form>
+      </div>
+    </body> 
 </body>
 
 </html>
