--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,11 @@
     <title>The Liquor Cabinet</title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
-    <link rel="stylesheet" type="text/css" href="../assets/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
     <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Kalam&display=swap" rel="stylesheet">
 
-    <base href="https://the-liquor-cabinet.firebaseapp.com/">
-   
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="http://parsleyjs.org/dist/parsley.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
@@ -24,10 +22,11 @@
     <script defer src="/__/firebase/6.6.1/firebase-database.js"></script>
     <script defer src="/__/firebase/6.6.1/firebase-messaging.js"></script>
     <script defer src="/__/firebase/6.6.1/firebase-storage.js"></script>
+    <script defer src="/__/firebase/6.6.1/firebase-firestore.js"></script>
     <!-- initialize the SDK after all desired features are loaded -->
     <script defer src="/__/firebase/init.js"></script>
 
-    <script src="../assets/javascript/app.js"></script>
+    <script defer src="assets/javascript/app.js"></script>
   </head>
   <body>
       <div class="container">
